--- a/public/assets/css/writty.css
+++ b/public/assets/css/writty.css
@@ -14,6 +14,10 @@ h1 {
     margin-inline-end: 0px;
 }
 
+ol {
+    list-style-position: inside;
+}
+
 h2 {
     font-size: 24px;
     font-weight: bold;
@@ -90,7 +94,7 @@ a:hover{
 }
 
 :focus {
-    outline: 1px solid var(--hightlight);   
+    outline: 1px solid var(--hightlight);
 }
 
 .topbar {
