--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -91,8 +91,25 @@ p{
 
 .banner{
     height: 500px;
-    background-color: var(--container-color);
+    background-image:linear-gradient(rgba(0, 15, 200, 0.5),rgba(0, 15, 200, 0.5)),url('../images/gebrak.jpeg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
+.title-banner {
+    align-items: center;
+    font-size: 18pt;
+    margin-top: 100px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    transform: translateY(-50%);
+    text-shadow: 2px 2px 4px #000;
+}
+
 
 .item-app{
     background-color: var(--container-color);
@@ -360,6 +377,9 @@ a:hover{
 }
 
 @media screen and (min-width:768px){
+    .title-banner{
+        font-size: 40pt;
+    }
     .container{
         margin-left: auto;
         margin-right: auto;
